--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@
 
 osx_image: xcode12.2
 language: objective-c
-xcode_workspace: DDMockiOS.xcworkspace
-xcode_scheme: DDMockiOSTests
+xcode_workspace: DDMock.xcworkspace
+xcode_scheme: DDMockTests
 xcode_destination: platform=iOS Simulator,OS=12.4,name=iPhone X
